WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131575
ViewportConfiguration::layoutWidth() compute the width incorrectly when initial-scale+width do not fit in view
https://bugs.webkit.org/show_bug.cgi?id=131575
Summary
ViewportConfiguration::layoutWidth() compute the width incorrectly when initi...
Benjamin Poulain
Reported
2014-04-11 17:31:50 PDT
ViewportConfiguration::layoutWidth() compute the width incorrectly when initial-scale+width do not fit in view
Attachments
Patch
(1.89 KB, patch)
2014-04-11 17:34 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-04-11 17:34:51 PDT
Created
attachment 229187
[details]
Patch
Benjamin Poulain
Comment 2
2014-04-11 17:43:59 PDT
Comment on
attachment 229187
[details]
Patch Clearing flags on attachment: 229187 Committed
r167176
: <
http://trac.webkit.org/changeset/167176
>
Benjamin Poulain
Comment 3
2014-04-11 17:44:01 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug