ViewportConfiguration::layoutWidth() compute the width incorrectly when initial-scale+width do not fit in view https://bugs.webkit.org/show_bug.cgi?id=131575

Patch by Benjamin Poulain <bpoulain@apple.com> on 2014-04-11
Reviewed by Enrica Casucci.

I made a mistake when writing the new viewport code: ViewportConfiguration::layoutWidth() uses m_contentSize in one place.
That make no sense, contentSize depends on the layout width.

* page/ViewportConfiguration.cpp:
(WebCore::ViewportConfiguration::layoutWidth):


Canonical link: https://commits.webkit.org/149644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167176 268f45cc-cd09-0410-ab3c-d52691b4dbfc